--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-Readme goes here.
+The original HatMe
+
+HatMeEnhanced available by egg82 here: https://www.spigotmc.org/resources/hatmeenhanced.25040/
+Git here: https://github.com/egg82/HatMeEnhanced
